--- a/AirdPro/Properties/Resources.resx
+++ b/AirdPro/Properties/Resources.resx
@@ -202,4 +202,10 @@
   <data name="Help" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\menu\help.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Spectrum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\menu\spectrum.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Spectrum16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\menu\spectrum16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
